--- a/app/workflowmonitor/webapp/test/flpSandbox.html
+++ b/app/workflowmonitor/webapp/test/flpSandbox.html
@@ -44,10 +44,10 @@
                 }
             },
             applications: {
-                "comworkflowmonitorworkflowmoni-tile": {
+                "workflowmonitor-tile": {
                     title: "App Title",
                     description: "An SAP Fiori application.",
-                    additionalInformation: "SAPUI5.Component=com.workflowmonitor.workflowmonitor",
+                    additionalInformation: "SAPUI5.Component=workflowmonitor",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -55,17 +55,17 @@
         };
     </script>
 
-    <script src="https://sapui5.hana.ondemand.com/1.134.1/test-resources/sap/ushell/bootstrap/sandbox.js" id="sap-ushell-bootstrap"></script>
+    <script src="https://sapui5.hana.ondemand.com/1.135.0/test-resources/sap/ushell/bootstrap/sandbox.js" id="sap-ushell-bootstrap"></script>
     <!-- Bootstrap the UI5 core library. 'data-sap-ui-frameOptions="allow"'' is a NON-SECURE setting for test environments -->
     <script id="sap-ui-bootstrap"
-        src="https://sapui5.hana.ondemand.com/1.134.1/resources/sap-ui-core.js"
+        src="https://sapui5.hana.ondemand.com/1.135.0/resources/sap-ui-core.js"
         data-sap-ui-libs=""
         data-sap-ui-async="true"
         data-sap-ui-preload="async"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"com.workflowmonitor.workflowmonitor": "../"}'
+        data-sap-ui-resourceroots='{"workflowmonitor": "../"}'
         data-sap-ui-frameOptions="allow"
         data-sap-ui-flexibilityServices='[{"connector": "LocalStorageConnector"}]'>
     </script>
